# llm-affect-lab

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py
backend/pipeline/: __init__.py  backfill_self_report.py  models.py  prompt_loader.py  runner.py
backend/scoring/: fas.py  score_run.py  self_report.py
configs/: logprob_candidate_models.json  provider_preferences.example.json  provider_preferences.logprob_probe.json
llm_affect_lab/: __init__.py
llm_affect_lab/pipeline/: backfill_self_report.py  openrouter_models.py  prompt_loader.py  runner.py
llm_affect_lab/scoring/: fas.py  score_run.py  self_report.py
llm_affect_lab/storage/: reader.py  schema.py  writer.py
prompts/: full_study.jsonl  smoke_logprobs.jsonl
prompts/bank/: logprob_probe.jsonl  pilot.jsonl
scripts/: audit_pilot_results.py  generate_full_study_report.py  openrouter_capabilities.py  run_full_study_n5_first3.sh  run_logprob_candidate_probe.sh  run_pilot.sh  run_smoke_logprobs.sh  score_run.sh  summarize_logprob_probe.py  upload_hf_dataset.py
